--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        HOST: 0.0.0.0
+        PORT: 8765
     container_name: mcp-server
     ports:
       - "8765:8765"
